tdf#111870 Translate the "My AutoText" string in the Edit Categories window

Change-Id: I483fa998d140c8458948fe19c5338e7af0d32527